<resources>
    <string name="app_name">BeerCheer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="locationTitle">Come Visit Us</string>
    <string name="locationSummary">Come see us in person to see more of our combinations</string>
    <string name="aboutUsTitle">Learn Our Story</string>
    <string name="aboutUsSummary">Emplore onto how we got to where we are today</string>
    <string name="beerType">Beer Types</string>
    <string name="beerColor">Beer Color</string>
    <string name="combination">Combination</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="license">
        BeerCheer 1.0\n
        Copyright &#169; 2018 Utsav Dave, Jonathan Stevanka\n

        *** END USER LICENSE AGREEMENT ***\n
        \n
        IMPORTANT: PLEASE READ THIS LICENSE CAREFULLY BEFORE USING THIS SOFTWARE.\n
        \n
        1. LICENSE\n

        By receiving, opening the file package, and/or using BeerCheer 1.0("Software") containing this software, you agree that this End User User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it. You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.\n
        Unless you have a different license agreement signed by Utsav Dave, Jonathan Stevanka your use of BeerCheer 1.0 indicates your acceptance of this license agreement and warranty.\n
        Subject to the terms of this Agreement, Utsav Dave, Jonathan Stevanka grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use BeerCheer 1.0 in accordance with this Agreement and any other written agreement with Utsav Dave, Jonathan Stevanka. Utsav Dave, Jonathan Stevanka does not transfer the title of BeerCheer 1.0 to you; the license granted to you is not a sale. This agreement is a binding legal agreement between Utsav Dave, Jonathan Stevanka and the purchasers or users of BeerCheer 1.0.\n
        If you do not agree to be bound by this agreement, remove BeerCheer 1.0 from your computer now and, if applicable, promptly return to Utsav Dave, Jonathan Stevanka by mail any copies of BeerCheer 1.0 and related documentation and packaging in your possession.\n
        \n
        2. DISTRIBUTION\n

        BeerCheer 1.0 and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of BeerCheer 1.0 contact Utsav Dave, Jonathan Stevanka.\n
        \n
        3. USER AGREEMENT\n

        3.1 Use\n

        Your license to use BeerCheer 1.0 is limited to the number of licenses purchased by you. You shall not allow others to use, copy or evaluate copies of BeerCheer 1.0.\n
        \n
        3.2 Use Restrictions\n

        You shall use BeerCheer 1.0 in compliance with all applicable laws and not for any unlawful purpose. Without limiting the foregoing, use, display or distribution of BeerCheer 1.0 together with material that is pornographic, racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.\n
        Each licensed copy of BeerCheer 1.0 may be used on one single computer location by one user. Use of BeerCheer 1.0 means that you have loaded, installed, or run BeerCheer 1.0 on a computer or similar device. If you install BeerCheer 1.0 onto a multi-user platform, server or network, each and every individual user of BeerCheer 1.0 must be licensed separately.\n
        You may make one copy of BeerCheer 1.0 for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of BeerCheer 1.0 . The assignment, sublicense, networking, sale, or distribution of copies of BeerCheer 1.0 are strictly forbidden without the prior written consent of Utsav Dave, Jonathan Stevanka. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of BeerCheer 1.0. If any person other than yourself uses BeerCheer 1.0 registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!\n
        \n
        3.3 Copyright Restriction\n

        This Software contains copyrighted material, trade secrets and other proprietary material. You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile BeerCheer 1.0. Nor can you create any derivative works or other works that are based upon or derived from BeerCheer 1.0 in whole or in part.\n
        Utsav Dave, Jonathan Stevanka\'s name, logo and graphics file that represents BeerCheer 1.0 shall not be used in any way to promote products developed with BeerCheer 1.0 . Utsav Dave, Jonathan Stevanka retains sole and exclusive ownership of all right, title and interest in and to BeerCheer 1.0 and all Intellectual Property rights relating thereto.\n
        Copyright law and international copyright treaty provisions protect all parts of BeerCheer 1.0, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for Utsav Dave, Jonathan Stevanka.\n
        \n
        3.4 Limitation of Responsibility\n

        You will indemnify, hold harmless, and defend Utsav Dave, Jonathan Stevanka , its employees, agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of Utsav Dave, Jonathan Stevanka\'s Software.\n
        In no event (including, without limitation, in the event of negligence) will Utsav Dave, Jonathan Stevanka , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, BeerCheer 1.0 or the use or inability to use BeerCheer 1.0 or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.\n
        Utsav Dave, Jonathan Stevanka\'s entire liability, without exception, is limited to the customers\' reimbursement of the purchase price of the Software (maximum being the lesser of the amount paid by you and the suggested retail price as listed by Utsav Dave, Jonathan Stevanka ) in exchange for the return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer back to Utsav Dave, Jonathan Stevanka.\n
        \n
        3.5 Warranties\n

        Except as expressly stated in writing, Utsav Dave, Jonathan Stevanka makes no representation or warranties in respect of this Software and expressly excludes all other warranties, expressed or implied, oral or written, including, without limitation, any implied warranties of merchantable quality or fitness for a particular purpose.\n
        \n
        3.6 Governing Law\n

        This Agreement shall be governed by the law of the Canada applicable therein. You hereby irrevocably attorn and submit to the non-exclusive jurisdiction of the courts of Canada therefrom. If any provision shall be considered unlawful, void or otherwise unenforceable, then that provision shall be deemed severable from this License and not affect the validity and enforceability of any other provisions.\n
        \n
        3.7 Termination\n

        Any failure to comply with the terms and conditions of this Agreement will result in automatic and immediate termination of this license. Upon termination of this license granted herein for any reason, you agree to immediately cease use of BeerCheer 1.0 and destroy all copies of BeerCheer 1.0 supplied under this Agreement. The financial obligations incurred by you shall survive the expiration or termination of this license.\n
        \n
        4. DISCLAIMER OF WARRANTY\n

        THIS SOFTWARE AND THE ACCOMPANYING FILES ARE SOLD "AS IS" AND WITHOUT WARRANTIES AS TO PERFORMANCE OR MERCHANTABILITY OR ANY OTHER WARRANTIES WHETHER EXPRESSED OR IMPLIED. THIS DISCLAIMER CONCERNS ALL FILES GENERATED AND EDITED BY BeerCheer 1.0 AS WELL.\n
        \n
        5. CONSENT OF USE OF DATA\n

        You agree that Utsav Dave, Jonathan Stevanka may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to BeerCheer 1.0.Utsav Dave, Jonathan Stevanka may also use this information to provide notices to you which may be of use or interest to you.\n
        \n
        \n
        \n
    </string>
    <string name="libraries">Libraries</string>
    <string name="viewpagerSource" translatable="false">ViewPager Library - com.github.devlight:infinitecycleviewpager:1.0.2</string>
    <string name="recyclerViewSource" translatable="false">Expandable RecyclerView Library - https://bignerdranch.github.io/expandable-recycler-view/</string>
    <string name="recyclerViewSource2" translatable="false">Expandable RecyclerView Library - https://github.com/thoughtbot/expandable-recycler-view</string>
    <string name="bottomNavigation">Bottom Navigation Icons</string>
    <string name="typeIconSource" translatable="false">Beer Types Icon - https://www.flaticon.com/authors/ddara</string>
    <string name="combinationIconSource" translatable="false">Combination Icon - https://www.flaticon.com/authors/eucalyp</string>
    <string name="homeIconSource" translatable="false">Home Icon - https://www.flaticon.com/authors/freepik</string>
    <string name="colorIconSource" translatable="false">Beer Color Icon - https://www.flaticon.com/authors/eucalyp</string>
    <string name="settingsIconSource" translatable="false">Settings Icon - https://www.flaticon.com/authors/smashicons</string>
    <string name="mainApplication" translatable="false">Main Application Icon</string>
    <string name="mainApplicationSource" translatable="false">https://www.flaticon.com/authors/smashicons</string>
    <string name="beerCombinationSource">Beer Combination Screen Icons</string>
    <string name="chickenIcon">Chicken Icon - https://www.flaticon.com/authors/freepik</string>
    <string name="fishIcon">Fish Icon - https://www.flaticon.com/authors/freepik</string>
    <string name="contactTitle">CONTACT</string>
    <string name="legalTitle">LEGAL</string>
    <string name="feedbackTitle">Send Feedback</string>
    <string name="feedbackSummary">Report technical issues or suggest new feautures</string>
    <string name="supportTitle">Technical Support</string>
    <string name="supportSummary">Call us anytime to get technical support</string>
    <string name="license_2" translatable="false">License</string>
    <string name="credits" translatable="false">Credits</string>
    <string name="creatorDescription">Hello my name is jonathan stevanka, i enjoy building android applications, java applications, and doing personal hobbies.</string>
    <string name="creatorDescription2">Hey there my name is Dave. I enjoy creating softwares, websites, apps. I try my best to create something valuable for our community.</string>
    <string name="creatorTitle">Dave Utsav</string>
    <string name="creatorTitle2">Jonathan Stevanka</string>
</resources>