<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/combination"
        android:icon="@drawable/combination"
        android:id="@+id/navigation_combination"/>

    <item
        android:title="@string/beerType"
        android:id="@+id/navigation_beerType"
        android:icon="@drawable/beer_types"/>

    <item
        android:title="@string/home"
        android:icon="@drawable/home"
        android:id="@+id/navigation_home"/>

    <item
        android:title="@string/beerColor"
        android:icon="@drawable/color_calculator"
        android:id="@+id/navigation_beerColor"/>

    <item
        android:title="@string/aboutUs"
        android:icon="@drawable/contact_us"
        android:id="@+id/navigation_aboutUs"/>

</menu>
