<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    tools:context=".learnOurStory">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/bottom_sheet_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/learnOurStoryTitle"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/learnOurStoryTitle"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:text="@string/aboutUsTitle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="97dp"
                android:layout_height="101dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/me"
                app:layout_constraintStart_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

            <TextView
                android:id="@+id/creatorDescription"
                android:layout_width="0dp"
                android:layout_height="88dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:scrollbars="none"
                android:text="@string/creatorDescription"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/creatorTitle1" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="97dp"
                android:layout_height="101dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/dave"
                app:layout_constraintStart_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <TextView
                android:id="@+id/creatorDescription2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/creatorDescription2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/creatorTitle2" />

            <TextView
                android:id="@+id/creatorTitle2"
                android:layout_width="205dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/creatorTitle"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/creatorDescription" />

            <TextView
                android:id="@+id/creatorTitle1"
                android:layout_width="205dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/imprima"
                android:text="@string/creatorTitle2"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>